--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "whatwg-fetch": "^3.5.0"
   },
   "scripts": {
-    "start": "node server/server.js",
-    "dev": "react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "lint": "node_modules/.bin/eslint --ext js src --fix",
